# alpha-zero-general

./: .gitignore  Arena.py  Coach.py  JGGame.py  JGNet.py  JGame-test.ipynb  MCTS.py  main.py  pyproject.toml  requirements-frozen.txt  requirements.txt  run-server  server.py  test_server.py
othello/pytorch/: NNet.py
tafl/pytorch/: NNet.py
