[project]
name = "alpha-zero-general"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==1.1.0",
    "astunparse==1.6.3",
    "cachetools==5.2.0",
    "certifi==2022.5.18.1",
    "charset-normalizer==2.0.12",
    "coloredlogs==15.0.1",
    "flatbuffers>=25.2.10",
    "gast==0.4.0",
    "google-auth-oauthlib==0.4.6",
    "google-auth==2.8.0",
    "google-pasta==0.2.0",
    "grpcio>=1.71.0",
    "h5py>=3.13.0",
    "humanfriendly==10.0",
    "idna==3.3",
    "importlib-metadata==4.11.4",
    "keras>=3.9.2",
    "keras-preprocessing>=1.1.2",
    "libclang==14.0.1",
    "markdown==3.3.7",
    "numpy>=2.1.3",
    "oauthlib==3.2.0",
    "opt-einsum==3.3.0",
    "packaging==21.3",
    "protobuf>=5.29.4",
    "pyasn1-modules==0.2.8",
    "pyasn1==0.4.8",
    "pyparsing==3.0.9",
    "requests-oauthlib==1.3.1",
    "requests==2.28.0",
    "rsa==4.8",
    "six==1.16.0",
    "tensorboard>=2.19.0",
    "tensorboard-data-server>=0.7.2",
    "tensorboard-plugin-wit>=1.8.1",
    "tensorflow>=2.19.0",
    "tensorflow-estimator>=2.15.0",
    "tensorflow-io-gcs-filesystem>=0.37.1",
    "termcolor>=3.0.1",
    "torch>=2.6.0",
    "tqdm==4.64.0",
    "typing-extensions>=4.13.2",
    "urllib3==1.26.9",
    "werkzeug==2.1.2",
    "wrapt==1.14.1",
    "zipp==3.8.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.3",
    "uvicorn>=0.34.1",
    "colorist>=1.8.3",
]
